@@ -268,6 +268,35 @@ triggered if the voltage drops below 11.0V. This is suitable for standard lead-a
 If you've got another chemistry, change the values accordingly.
 
 
+^^^^^^^^^^^^^^^^^
+Shutdown / Reboot
+^^^^^^^^^^^^^^^^^
+
+You can set a voltage level to trigger a system shutdown. The module will close all connections,
+shutdown all components and enter deep sleep mode to achieve minimal power consumption. It will
+then wait for the voltage level to recover above the configured minimum wakeup voltage before
+doing a reboot.
+
+On most vehicles, this can also be used to automatically shutdown the module when the vehicle
+isn't operated (driven or charged), as the 12V level normally is above 13V when the vehicle is
+in an operational state, and drops to below 13V when the vehicle is switched off.
+
+The shutdown condition is checked once per minute. You can configure a minimum delay for the actual
+shutdown to be done, default is 2 minutes (= 3 consecutive tests = 2-3 minutes).
+
+To test for a recovered 12V level, the module needs to do short wakeups of ~3 seconds (only CPU,
+no components). This is by default done every 60 seconds. If you use the auto shutdown to follow
+the vehicle operational state, consider lowering this to e.g. 15 seconds to get a quick detection
+of the vehicle being switched on.
+
+Configuration can be done via the web UI or by these config variables::
+
+  config set vehicle 12v.shutdown <voltage>
+  config set vehicle 12v.shutdown_delay <minutes>
+  config set vehicle 12v.wakeup <voltage>
+  config set vehicle 12v.wakeup_interval <seconds>
+
+
 ^^^^^^^^^^^^^^^
 Related Metrics
 ^^^^^^^^^^^^^^^
@@ -291,6 +320,25 @@ Event                               Data      Purpose
 =================================== ========= =======
 vehicle.alert.12v.on                          12V system voltage is below alert threshold
 vehicle.alert.12v.off                         12V system voltage has recovered
+vehicle.alert.12v.low                         12V shutdown voltage level detected
+vehicle.alert.12v.operational                 12V recovered above shutdown level
+vehicle.alert.12v.shutdown                    12V shutdown threshold reached, entering deep sleep
 vehicle.charge.12v.start                      Vehicle 12V battery is charging
 vehicle.charge.12v.stop                       Vehicle 12V battery has stopped charging
 =================================== ========= =======
+
+See :doc:`scripting` on how to attach custom scripts to events.
+
+^^^^^^^^^^^^^^^^^^^^^
+Related Notifications
+^^^^^^^^^^^^^^^^^^^^^
+
+======= =========================== ================================================================
+Type    Subtype                     Purpose / Content
+======= =========================== ================================================================
+alert   batt.12v.alert              12V Battery critical
+alert   batt.12v.recovered          12V Battery restored
+alert   batt.12v.shutdown           System shutdown (deep sleep) due to low 12V battery level
+======= =========================== ================================================================
+
+See :doc:`notifications` on how to filter/suppress notifications.
